resolver unit tests

--- a/package.json
+++ b/package.json
@@ -50,8 +50,9 @@
     "graphql-type-json": "^0.3.2",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.3",
-    "mysql2": "^3.16.2",
+    "mysql2": "^3.16.3",
     "neverthrow": "^8.2.0",
+    "testcontainers": "^11.11.0",
     "winston": "^3.19.0"
   }
 }
